# TokenCore

./: CMakeLists.txt  ReadMe.md  TokenCore.sln  cmake.sh
Android/: settings.gradle
Android/gradle/wrapper/: gradle-wrapper.properties
Android/tokencore/: CMakeLists.txt  build.gradle
Android/tokencore/src/main/: AndroidManifest.xml
Android/tokencore/src/main/cpp/: btc.cpp  common.cpp  eos.cpp  eth.cpp  nativeapi.cpp  trx.cpp
Android/tokencore/src/main/java/com/btxon/tokencore/: Common.java  Tx.java  TxBtc.java  TxEOS.java  TxEth.java  TxTRX.java
Android/tokencore/src/main/res/values/: strings.xml
Mac/TokenCore/: CMakeLists.txt  ios.sh
TCTest/: BHPTest.cpp  BTCTest.cpp  BtxonApiTest.cpp  BumoTest.cpp  CosExt.cpp  CosExt.h  CosTest.cpp  EosTest.cpp  EthTest.cpp  TCTest.vcxproj  TCTest.vcxproj.filters  TronTest.cpp  U256Test.cpp  main.cpp
TCTest/BShield/: BWallet.cpp  BWallet.h  Coin.cpp  Coin.h  CoinApiAdapter.cpp  CoinApiAdapter.h  global.h
TCTest/HttpAPI/: AsyncHttpClient.cpp  AsyncHttpClient.h  BaseHttpClient.cpp  BaseHttpClient.h  BtxonAPI.cpp  BtxonAPI.h  BtxonAsyncAPI.cpp  BtxonAsyncAPI.h  GateIOAsyncAPI.cpp  GateIOAsyncAPI.h
TCTest/lib/Include/: CosBase.h
TCTest/lib/x64/Debug/: CosBase.lib
TCTest/lib/x64/Release/: CosBase.lib
TCTest/lib/x86/Debug/: CosBase.lib
TCTest/lib/x86/Release/: CosBase.lib
TokenCore/: BhpApi.cpp  BhpApi.h  BtcApi.cpp  BtcApi.h  BumoApi.cpp  BumoApi.h  EosApi.cpp  EosApi.h  EthApi.cpp  EthApi.h  TokenCommon.cpp  TokenCommon.h  TokenCore.vcxproj  TokenCore.vcxproj.filters  TronApi.cpp  TronApi.h  u256.cpp  u256.h
TokenCore/Bhp/: bhp_transaction.cpp  bhp_transaction.h
TokenCore/Btc/: mnemonic-new.cpp  mnemonic-new.h  prikey-to-wif.cpp  prikey-to-wif.h  script.cpp  script.h
TokenCore/Bumo/: BumoRequest.cpp  BumoRequest.h  chain.pb.cc  chain.pb.h  chain.proto  common.pb.cc  common.pb.h  common.proto  protoc-chain.bat  protoc-common.bat
TokenCore/Bumo/ed25519/: add_scalar.c  ed25519.h  ed25519_sha512.c  keypair.c  sign.c  verify.c
TokenCore/Eos/: action.cpp  action.h  chainbase.h  chainmanager.cpp  chainmanager.h  eos_key_encode.cpp  eos_key_encode.h  eosapi_utils.cpp  eosapi_utils.h  eosbytewriter.cpp  eosbytewriter.h  eosnewaccount.cpp  eosnewaccount.h  packedtransaction.cpp  packedtransaction.h  signedtransaction.cpp  signedtransaction.h  transaction.cpp  transaction.h  transactionheader.cpp  transactionheader.h  typekeypermissionweight.cpp  typekeypermissionweight.h  typename.cpp  typename.h  typepermissionlevel.cpp  typepermissionlevel.h
TokenCore/Eth/: RLP.c  RLP.h  sign.h
TokenCore/Tron/: CJsonObject.hpp  Transaction.pb.cc  Transaction.pb.h  Transaction.proto
TokenCore/Tron/google/protobuf/compiler/: parser.cc
TokenCore/Tron/google/protobuf/stubs/: io_win32.cc
TokenCore/Usdt/: createpayload.cpp  createpayload.h
TokenCore/crypto/: base58.cpp  base58.h  base64.cpp  base64.h  bip.cpp  bip.h  bx_plat.cpp  bx_plat.h  bx_str.cpp  bx_str.h  hash.cpp  hash.h  hmac.cpp  hmac.h  hmac_sha512.cpp  hmac_sha512.h  keccak256.c  keccak256.h  pbkdf2.cpp  pbkdf2.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha2.cpp  sha2.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h  tx_util.cpp  tx_util.h  util.c  util.h  utility_tools.cpp  utility_tools.h
TokenCore/mbedtls/include/mbedtls/: config.h
TokenCore/uEcc/: macroECC.c  macroECC.h  uECC.c  uECC.h
doc/BHP/: bhp_tx.txt  bhp_tx1.txt  解释 Transaction.txt
doc/BTC-USDT/: OP_RETURN.txt  USDT-mainnet.txt  bx-testnet.cfg  bx.cfg  hd-prikey.txt  mainnet_tx.txt  multi_sign_address.txt  multi_sign_to_oridinary.txt  multi_sign_tx.txt  multi_sign_tx1.txt  multi_sign_tx2.txt  multi_sign_tx3.txt  my_pri_pub_keys.txt  nLocktime-sequence.txt  segregate_witness_tx.txt  segregate_witness_tx1.txt  segregate_witness_tx2.txt  special_tx.txt  test_tx.txt  tx-format-1.txt  tx-format.txt  usdt-mainnet1.txt  服务器地址.txt
doc/Bumo/: BumoApi.txt  bumo-command.txt  bumo资料整理.docx  create_account.txt  pri_pub_key.txt  tx_ATP_asset.txt  tx_CTP_token.txt  tx_coin.txt
doc/Tron/: TriggerSmartContract.txt  TriggerSmartContract_1.txt  TronApi.txt  command.txt  encode.txt  pri_pub_address.txt  trx_freeze_json.txt  tx.txt
doc/ed25519/: ed25519.sln
doc/ed25519/BloodyRookie/: BloodyRookie.vcxproj  BloodyRookie.vcxproj.filters  main.cpp  test.c
doc/ed25519/BloodyRookie/src/: ed25519.h  key_exchange_nem.c  keypair.c  sha512.h  sign.c  verify.c  zeroize.c
doc/ed25519/algEd25519/: algEd25519.vcxproj  algEd25519.vcxproj.filters  base58.cpp  base58.h  main.cpp
doc/ed25519/floodyberry/: floodyberry.vcxproj  floodyberry.vcxproj.filters  main.cpp  sha512.c  zeroize.h
doc/ed25519/floodyberry/ed25519-donna/: curve25519-donna-32bit.h  ed25519-donna-portable.h  ed25519-hash-custom.h  ed25519-hash.h  ed25519-randombytes.h  ed25519.c
doc/ed25519/orlp/: main.cpp  orlp.vcxproj  orlp.vcxproj.filters
doc/ed25519/orlp/ed25519/: ed25519.h  keypair.c
iOS/: CMakeCache.txt  cmake_install.cmake
iOS/CMakeScripts/: ReRunCMake.make
iOS/Project.xcodeproj/: project.pbxproj
iOS/Project.xcodeproj/project.xcworkspace/xcuserdata/isodev.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/Project.xcodeproj/xcshareddata/xcschemes/: tokencore.xcscheme
iOS/Project.xcodeproj/xcuserdata/isodev.xcuserdatad/xcschemes/: xcschememanagement.plist
iOS/tools/: CMakeLists.txt  TokenCoreHeader.h  ios.sh
iOS/tools/ios-cmake/: iOS_64.cmake
